--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <link rel="icon" href="https://images.emojiterra.com/google/noto-emoji/unicode-15.1/color/share/1f431.jpg" type="image/jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Api Cat - Creado por Ignacio Larraín Villegas</title>
   </head>
 <body>
@@ -16,6 +18,17 @@
         <h1>Imágenes random de gatitos para ti 🐱</h1>
         <button id="obtenerGato" class="btn btn-primary mt-3">Obtener Imagen de Gato</button>
         <p class="mt-4">Me llamo Ignacio Larraín, soy Programador Full Stack en JS. Este es un proyecto de práctica, estaba un poco oxidado. ¡Espero lo disfrutes!</p>
+        <div class="social-buttons mt-1">
+          <a href="https://github.com/Iahlik" target="_blank" class="btn btn-dark btn-sm me-2">
+            <i class="fab fa-github"></i> GitHub
+          </a>
+          <a href="https://wa.me/1234567890" target="_blank" class="btn btn-success btn-sm me-2">
+            <i class="fab fa-whatsapp"></i> WhatsApp
+          </a>
+          <a href="https://www.linkedin.com/in/ignaciolarraín/" target="_blank" class="btn btn-primary btn-sm">
+            <i class="fab fa-linkedin"></i> LinkedIn
+          </a>
+        </div>
       </div>
       <div class="col-md-6 text-center">
         <img id="imagenGato" src="" alt="Imagen de un gato" class="img-fluid rounded shadow d-none">
