personalizacion de botones

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
           <a href="https://github.com/Iahlik" target="_blank" class="btn btn-dark btn-sm me-2">
             <i class="fab fa-github"></i> GitHub
           </a>
-          <a href="https://wa.me/1234567890" target="_blank" class="btn btn-success btn-sm me-2">
+          <a href="https://wa.link/edj1we" target="_blank" class="btn btn-success btn-sm me-2">
             <i class="fab fa-whatsapp"></i> WhatsApp
           </a>
-          <a href="https://www.linkedin.com/in/ignaciolarraín/" target="_blank" class="btn btn-primary btn-sm">
+          <a href="https://www.linkedin.com/in/ignacio-larra%C3%ADn-villegas-13091565/" target="_blank" class="btn btn-primary btn-sm">
             <i class="fab fa-linkedin"></i> LinkedIn
           </a>
         </div>
